--- a/common/build.gradle
+++ b/common/build.gradle
@@ -15,6 +15,10 @@ repositories {
 }
 
 dependencies {
+    //Test
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+    
     //Apache
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
     implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
