--- a/common/build.gradle
+++ b/common/build.gradle
@@ -16,8 +16,15 @@ repositories {
 
 dependencies {
     //Test
-    testImplementation "org.junit.jupiter:junit-jupiter:5.6.2"
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.21.0'
+    testImplementation "org.junit.jupiter:junit-jupiter:5.7.1"
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
+    testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.8.1'
+    
+    testImplementation "org.hamcrest:hamcrest:2.1"
+    
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+    implementation group: 'com.google.guava', name: 'guava', version: '11.0.2'
     
     //Apache
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
@@ -27,6 +34,10 @@ dependencies {
 
     //Logger
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha5'
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
 
 test {
