--- a/modeling/build.gradle
+++ b/modeling/build.gradle
@@ -16,6 +16,18 @@ repositories {
 
 dependencies {
     implementation project(':common')
+    
+    //Test
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.21.0'
+    testImplementation "org.junit.jupiter:junit-jupiter:5.7.1"
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
+    testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.8.1'
+    
+    testImplementation "org.hamcrest:hamcrest:2.1"
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
 
 test {
