--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,6 +7,7 @@
  */
 
 plugins {
+    id 'java'
     id 'java-library'
 }
 
@@ -17,11 +18,11 @@ repositories {
 dependencies {
     //Test
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.21.0'
-    testImplementation "org.junit.jupiter:junit-jupiter:5.7.1"
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
     testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.8.1'
     
-    testImplementation "org.hamcrest:hamcrest:2.1"
+    testImplementation 'org.hamcrest:hamcrest:2.1'
     
     // https://mvnrepository.com/artifact/com.google.guava/guava
     implementation group: 'com.google.guava', name: 'guava', version: '11.0.2'
