--- a/common/build.gradle
+++ b/common/build.gradle
@@ -23,15 +23,17 @@ dependencies {
     testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.8.1'
     
     testImplementation 'org.hamcrest:hamcrest:2.1'
-    
-    // https://mvnrepository.com/artifact/com.google.guava/guava
-    implementation group: 'com.google.guava', name: 'guava', version: '11.0.2'
-    
-    //Apache
+
+    // Apache
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
     implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
     implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
+
+    // Jackson
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.0'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.0'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.0'
 
     //Logger
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha5'
