--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,15 +6,6 @@
  * User Manual available at https://docs.gradle.org/6.8/userguide/building_java_projects.html
  */
 
-plugins {
-    id 'java'
-    id 'java-library'
-}
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
     //Test
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.21.0'
@@ -32,17 +23,9 @@ dependencies {
 
     // Jackson
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.0'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.0'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2.1'
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.0'
 
     //Logger
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha5'
-}
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
-
-test {
-    useJUnitPlatform()
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-beta0'
 }
