--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,15 @@ subprojects {
         mavenCentral()
     }
 
+    dependencies {
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
+        testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.8.1'
+
+        implementation 'javax.annotation:javax.annotation-api:1.3.2'
+        implementation 'com.google.code.findbugs:jsr305:3.0.2'
+    }
+
     test {
         useJUnitPlatform()
     }
