--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,20 +6,21 @@
  * User Manual available at https://docs.gradle.org/6.8/userguide/building_java_projects.html
  */
 
-dependencies {
-    //Test
-    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.21.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
-    testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.8.1'
-    
-    testImplementation 'org.hamcrest:hamcrest:2.1'
+plugins {
+    id 'java'
+    id 'java-library'
+}
 
+repositories {
+    mavenCentral()
+}
+
+dependencies {
     // Apache
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
-    implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
-    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
-    implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'commons-beanutils:commons-beanutils:1.9.4'
 
     // Jackson
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.0'
@@ -28,4 +29,8 @@ dependencies {
 
     //Logger
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-beta0'
+}
+
+test {
+    useJUnitPlatform()
 }
