--- a/apache-kafka-docker-sample/build.gradle
+++ b/apache-kafka-docker-sample/build.gradle
@@ -7,7 +7,8 @@
  */
 
 plugins {
-    id 'org.springframework.boot' version '2.3.4.RELEASE'
+    id 'application'
+    id 'org.springframework.boot' version '2.7.3'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 }
 
@@ -23,4 +24,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
     implementation 'org.springframework.kafka:spring-kafka:2.9.0'
+}
+
+bootJar {
+    archiveBaseName = 'spring-boot-app'
+    mainClassName = 'reivosar.Application'
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
