--- a/common/build.gradle
+++ b/common/build.gradle
@@ -22,10 +22,13 @@ dependencies {
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'commons-beanutils:commons-beanutils:1.9.4'
 
+    // Guava
+    implementation 'com.google.guava:guava:31.1-jre'
+
     // Jackson
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.0'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2.1'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
 
     //Logger
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-beta0'
