--- a/common/build.gradle
+++ b/common/build.gradle
@@ -21,6 +21,9 @@ dependencies {
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'commons-beanutils:commons-beanutils:1.9.4'
+    implementation 'org.apache.pdfbox:pdfbox:3.0.0-alpha2'
+    implementation 'org.apache.pdfbox:fontbox:3.0.0-RC1'
+    implementation 'org.apache.pdfbox:pdfbox-tools:3.0.0-RC1'
 
     // Guava
     implementation 'com.google.guava:guava:31.1-jre'
