--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@
 
 plugins {
     id 'java-library'
+    id 'maven-publish'
 }
 
 group 'reivosar.java'
@@ -18,6 +19,7 @@ compileTestJava.options.encoding = 'UTF-8'
 
 repositories {
     mavenCentral()
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -45,11 +47,13 @@ dependencies {
     // Logger
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-beta0'
 
-
     // Junit
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
     testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.8.1'
+
+    // Jitpack
+    implementation 'com.github.jitpack:gradle-simple:1.0'
 }
 
 java {
