--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ plugins {
     id 'maven-publish'
 }
 
-group 'reivosar.java'
+group 'reivosar'
 version '1.0-SNAPSHOT'
 
 compileJava.options.encoding = 'UTF-8'
