--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ version '1.0'
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
+javadoc.options.encoding = 'UTF-8'
 
 repositories {
     mavenCentral()
@@ -30,12 +31,12 @@ dependencies {
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'commons-beanutils:commons-beanutils:1.9.4'
-    implementation 'org.apache.pdfbox:pdfbox:3.0.0-alpha2'
-    implementation 'org.apache.pdfbox:fontbox:3.0.0-RC1'
-    implementation 'org.apache.pdfbox:pdfbox-tools:3.0.0-RC1'
+    implementation 'org.apache.pdfbox:pdfbox:3.0.1'
+    implementation 'org.apache.pdfbox:fontbox:3.0.1'
+    implementation 'org.apache.pdfbox:pdfbox-tools:3.0.1'
 
     // Google
-    implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'com.google.guava:guava:33.0.0-jre'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
     // Jackson
@@ -45,7 +46,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.2'
 
     // Logger
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-beta0'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.14'
 
     // Junit
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
@@ -74,6 +75,6 @@ publishing {
 }
 
 wrapper {
-    gradleVersion = "7.3"
+    gradleVersion = "8.5"
     distributionType = Wrapper.DistributionType.ALL
 }
