--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
     testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.8.1'
+    testImplementation 'org.mockito:mockito-core:5.11.0'
 }
 
 java {
